--- a/_config.yml
+++ b/_config.yml
@@ -19,5 +19,5 @@ defaults:
       path:         ''
     values:
       layout:       post
-
-theme: jekyll-theme-cayman
+      
+theme: jekyll-theme-clean-blog
